As adviced by Brad King (CMake maintainer) it's better to use lib/ as folder for package configuration, instead of share/ because it enables arch-specific information to be stored with, as lib/ can be arch specific on linux.

--- a/tools/libclang/cmake/modules/CMakeLists.txt
+++ b/tools/libclang/cmake/modules/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(libclang_cmake_builddir "${CMAKE_BINARY_DIR}/share/cmake/libclang-${LIBCLANG_LIBRARY_VERSION}")
+set(libclang_cmake_builddir "${CMAKE_BINARY_DIR}/lib/cmake/libclang-${LIBCLANG_LIBRARY_VERSION}")
 
 configure_file (
     libclang-config.cmake.in
@@ -13,4 +13,4 @@ configure_file (
 install(FILES
     ${libclang_cmake_builddir}/libclang-config.cmake
     ${libclang_cmake_builddir}/libclang-config-version.cmake
-    DESTINATION share/cmake/libclang-${LIBCLANG_LIBRARY_VERSION})
+    DESTINATION lib/cmake/libclang-${LIBCLANG_LIBRARY_VERSION})
