--- a/tools/libclang/cmake/modules/libclang-config-version.cmake.in
+++ b/tools/libclang/cmake/modules/libclang-config-version.cmake.in
@@ -1,9 +1,16 @@
 set(PACKAGE_VERSION @LIBCLANG_LIBRARY_VERSION@)
-if("${PACKAGE_FIND_VERSION_MAJOR}" EQUAL @CLANG_VERSION_MAJOR@)
-    set(PACKAGE_VERSION_COMPATIBLE 1)
 
-    if("${PACKAGE_FIND_VERSION_MINOR}" EQUAL @CLANG_VERSION_MINOR@)
-        set(PACKAGE_VERSION_EXACT 1)
-    endif("${PACKAGE_FIND_VERSION_MINOR}" EQUAL @CLANG_VERSION_MINOR@)
+if("${PACKAGE_FIND_VERSION_MAJOR}" EQUAL @CINDEX_VERSION_MAJOR@ AND
+	NOT "${PACKAGE_FIND_VERSION_MINOR}" GREATER @CINDEX_VERSION_MINOR@)
+  set(PACKAGE_VERSION_COMPATIBLE 1)
 
-endif("${PACKAGE_FIND_VERSION_MAJOR}" EQUAL @CLANG_VERSION_MAJOR@)
+  # Here CLANG_VERSION_MAJOR and CLANG_VERSION_MINOR corresponds to the
+  # FIND_VERSION_PATCH and FIND_VERSION_TWEAK as we chosed to name the
+  # libclang with the four version components.
+  if("${PACKAGE_FIND_VERSION_MINOR}" EQUAL @CINDEX_VERSION_MINOR@ AND
+	  "${PACKAGE_FIND_VERSION_PATCH}" EQUAL @CLANG_VERSION_MAJOR@ AND
+	  "${PACKAGE_FIND_VERSION_TWEAK}" EQUAL @CLANG_VERSION_MINOR@)
+	  set(PACKAGE_VERSION_EXACT 1)
+  endif()
+
+endif()
