As we changed the LIBCLANG_LIBRARY_VERSION to contain CINDEX_VERSION_MAJOR and CINDEX_VERSION_MINOR, it's also needed in the LIBCLANG_VERSION_MAJOR and LIBCLANG_VERSION_MINOR variables.

--- a/tools/libclang/cmake/modules/libclang-config.cmake.in
+++ b/tools/libclang/cmake/modules/libclang-config.cmake.in
@@ -21,8 +21,8 @@
 #   (c.f. llvm/docs/Packaging.rst)
 #
 
-set(LIBCLANG_VERSION_MAJOR @CLANG_VERSION_MAJOR@)
-set(LIBCLANG_VERSION_MINOR @CLANG_VERSION_MINOR@)
+set(LIBCLANG_VERSION_MAJOR @CINDEX_VERSION_MAJOR@)
+set(LIBCLANG_VERSION_MINOR @CINDEX_VERSION_MINOR@)
 set(LIBCLANG_PACKAGE_VERSION @LIBCLANG_LIBRARY_VERSION@)
 
 set(LIBCLANG_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@")
